i added some file

--- a/Milestone O Orientation-What Matters In This Course/Module O Orientation - install necessary tools/About-courcess.html
+++ b/Milestone O Orientation-What Matters In This Course/Module O Orientation - install necessary tools/About-courcess.html
@@ -14,12 +14,33 @@
 0-2 Time Management And Build Your Own Routine <br>
 No Module Day = Conceptual Session <br>
 Module = 12 Video 2 Hours <br>
-some video and Practice <br>
+some video and Practice <br> 
 
 
 0-3 Everything You Need To Know About Assignment <br>
 
+
+
+SCIC ============> <br>
+
+1-10 ASS marks 50% <br>
+11-12 Ass marks 70% <br>
+
+All ass marks AVG ===== 48% <br>
+
+
+
+
+
+
+
 0-4 how to get support effectively 15 min <br>
+support== <br>
+11 am – no Fryday
+<br>
+04 pm
+<br>
+09 pmf
 
 0-5 Insall Visual Studio Code Node Git Scm And Github Account <br>
 
