--- a/Module 2-1 Introduction to CSS and CSS Types (Inline, Internal, External)/complete-css-style.html
+++ b/Module 2-1 Introduction to CSS and CSS Types (Inline, Internal, External)/complete-css-style.html
@@ -20,11 +20,49 @@
             color:  #c41b09;
             /* display: inline; */
         }
+        .link-style{
+            color: #3498db;
+            text-decoration: none;
+
+        }
+        .link-style:hover{
+            text-decoration: underline;
+            color: #2980b9;
+        }
+
+        .title-blog{
+            color: #2c3e50;
+            text-align: center;
+            font-size: 27px;
+        }
+
+        .content{
+            color: #34495e;
+            text-align: justify;
+            font-size: 16px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            line-height: 1.6;
+        }
+
+        .box-blog{
+            border: 4px solid gray ;
+            padding: 9px;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+
     </style>
 </head>
 <body>
  <h1 class="heading">Hellow Worlds</h1>
  <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eligendi dolor ea vero maiores ipsam, facilis facere, doloremque quas, tempora aperiam natus? Officiis quaerat sunt dolores explicabo, quae, reiciendis suscipit distinctio unde delectus inventore consequuntur incidunt. Iusto, veniam! Excepturi itaque repellat eum aut officiis. Adipisci tenetur reprehenderit explicabo aliquam dolor quae nostrum quas ipsum architecto pariatur, doloremque quod cum aut. <sup style="color: green; background-color: yellow; padding: 1px 3px; border-radius: 5px;" class="sacial-text "  >New</sup></p>
-    
+
+ <a class="link-style" href="www.google.com">Go to Google</a>
+
+ <div class="box-blog">
+    <h3>Title: <span class="title-blog" >Blog 1</span> </h3>
+    <p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, nostrum numquam ullam animi repudiandae accusamus expedita beatae iure ad quo ea qui quisquam nihil quibusdam labore eveniet, rem vel recusandae minus. Obcaecati similique voluptatem vero itaque, totam alias magnam quisquam quibusdam unde aliquid ipsa, sequi dolor nam eaque veniam. Debitis voluptate vel mollitia cumque. Asperiores illum adipisci labore pariatur cum! Nisi, tempore. Debitis, quia cupiditate similique nostrum eaque distinctio, dolore recusandae obcaecati, quidem ad praesentium ipsa. Quidem cupiditate natus fugit eius? Tenetur totam et, mollitia repudiandae placeat in dolore non ipsa porro libero dignissimos dicta qui error aut sunt ad. Distinctio possimus, quia vero iste optio esse. Ipsum sed incidunt magnam illo minima nam, maxime maiores aliquid iure facilis culpa doloremque sint numquam iusto quasi id ratione autem reprehenderit dicta labore. Sequi eaque possimus placeat quaerat! Asperiores consectetur rem veniam, ipsa excepturi tempora ducimus eaque nesciunt atque quaerat dolor saepe.</p>
+ </div>
+
 </body>
 </html>
